[risk=low][no ticket] Some WorkspaceMapper refactoring (#8648)